force-app/main/default/objects/RepairOrder__c/RepairOrder__c.object-meta.xml
<CustomObject>
    <description>수리 주문 정보를 관리하는 오브젝트입니다.</description>
    <label>Repair Order</label>
    <nameField>
        <label>Repair Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repair Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>