force-app/main/default/objects/RepairOrder__c/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <description>고객 연락처 전화번호입니다.</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>