force-app/main/default/objects/RepairOrder__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <description>고객의 이름입니다.</description>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>