force-app/main/default/objects/RepairOrder__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>수리 요청 증상 설명</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>