force-app/main/default/objects/RepairOrder__c/fields/IsApproved__c.field-meta.xml
<CustomField>
    <fullName>IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>수리 승인 여부입니다.</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>