force-app/main/default/objects/RepairOrder__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <description>배정된 기술자입니다.</description>
    <label>Technician</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>Repair Orders</relationshipLabel>
    <relationshipName>RepairOrders</relationshipName>
    <type>Lookup</type>
</CustomField>